# pymutant-mcp

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .secrets.baseline  AGENTS.md  README.md  REUSE.toml  conftest.py  pyproject.toml
.ci/: benchmark-baseline.json  max-loc-baseline.json  pymutant-policy-baseline.json  pymutant-profiles.json  xenon-baseline.json
.claude/skills/pymutant/references/: status-codes.md
.github/workflows/: ci.yml  release-readiness.yml
LICENSES/: Apache-2.0.txt
commands/: mutation-analyze.md  mutation-run.md
docs/: architecture.md  operator-runbook.md  policy-tooling-plan.md  reporting-artifacts.md  tool-contracts.md
schemas/: baseline-state.schema.json  benchmark-quality.schema.json  benchmark-throughput.schema.json  profiles.schema.json  score-history.schema.json
scripts/: check_event_literals.py  check_licenses.py  check_markdown_links.py  check_max_loc.py  check_spdx_headers.py  check_xenon.py  normalize_spdx_headers.py  validate_json_schema.py  validate_repo_schemas.py
server/: .project-root  README.md  pyproject.toml
server/src/pymutant/: baseline.py  config.py  failure_explain.py  init.py  io_utils.py  ledger.py  main.py  patch_suggest.py  policy.py  prioritization.py  profiles.py  results.py  runner.py  schema.py  score.py  setup.py  trends.py
server/src/pymutant/runner/: __init__.py  api.py  helpers.py
skills/pymutant/: SKILL.md
skills/pymutant/references/: mutmut-concepts.md  test-generation-patterns.md
src/: pymutant
src/pymutant/: __init__.py  __main__.py  io_utils.py  ledger.py  main.py  mutmut_cmd.py  quarantine.py  reporting.py  results.py
src/pymutant/runner/: __init__.py  api.py  helpers.py
src/repo_verify/: benchmark.py  cli.py  mcp_smoke.py  mutation_gate.py
tests/: conftest.py  test_benchmark.py  test_benchmark_artifacts.py  test_init.py  test_io_utils.py  test_ledger.py  test_main.py  test_new_features.py  test_property_based.py  test_property_invariants.py  test_results.py  test_runner.py  test_schema_validation.py  test_score.py  test_score_mutants.py  test_setup.py  test_verify_cli.py
tests/pymutant/: test_baseline_state.py  test_config.py  test_entrypoints.py  test_feature_modules.py  test_init_scaffolding.py  test_io_utils.py  test_ledger_state.py  test_main_api.py  test_property_invariants.py  test_results_reporting.py  test_runner_execution.py  test_score_metrics.py
tests/pymutant/runner/: __init__.py  test_helpers.py  test_output_sanitization.py  test_process_control.py  test_run_api_batches.py  test_run_api_core.py  test_run_option_validation.py
tests/repo_verify/: test_artifact_compaction.py  test_benchmark_artifacts.py  test_benchmark_cli.py  test_mcp_smoke.py  test_mutation_gate_cli.py  test_quality_cold_start.py  test_verify_cli.py
tests/tooling/: test_schema_validation.py
