[project]
name = "pymutant"
dynamic = ["version"]
description = "MCP server for mutation testing with mutmut"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "provide.io llc" }]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
pymutant = "pymutant.main:main"
benchmark = "repo_verify.benchmark:main"
verify = "repo_verify.cli:main"
mutation-gate = "repo_verify.mutation_gate:main"
mutation-sweep = "repo_verify.mutation_gate:main"
mcp-smoke = "repo_verify.mcp_smoke:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "RUF", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S", "RUF012"]
"scripts/**/*.py" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["mcp.*", "mutmut.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pymutant --cov=src/repo_verify --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["src/pymutant", "src/repo_verify"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.mutmut]
paths_to_mutate = ["src/pymutant/", "src/repo_verify/"]
tests_dir = ["tests/"]
also_copy = ["conftest.py"]
pytest_add_cli_args = ["--override-ini=addopts=-q -p no:cacheprovider"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "codespell>=2.4.1",
    "hypothesis>=6.140.3",
    "mutmut>=3.5.0",
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "pip-licenses>=5.0.0",
    "pre-commit>=4.3.0",
    "pymarkdownlnt>=0.9.34",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "ty>=0.0.19",
    "vulture>=2.14",
    "xenon>=0.9.3",
]
