[project]
name = "pymutant"
dynamic = ["version"]
description = "Python server package for pymutant"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "provide.io llc" }]
dependencies = ["mcp[cli]>=1.0.0"]

[project.scripts]
pymutant = "pymutant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymutant"]

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>.+)$"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
